revert attempt and try again to fix box shadow not rendering on mobile

--- a/src/app/input/input.component.scss
+++ b/src/app/input/input.component.scss
@@ -7,6 +7,7 @@
   border-color: transparent;
   padding: 0 0.5rem;
   font-size: 16px;
+  -webkit-appearance: none;
 }
 
 .textarea {
